--- a/MyGames/Base.lproj/Main.storyboard
+++ b/MyGames/Base.lproj/Main.storyboard
@@ -298,13 +298,16 @@
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="15"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="addEditCover:" destination="fj4-fs-duT" eventType="touchUpInside" id="sZb-g9-lIE"/>
+                                    <action selector="addEditGame:" destination="fj4-fs-duT" eventType="touchUpInside" id="LaR-MD-MlJ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FZc-LW-EbI">
                                 <rect key="frame" x="173.5" y="547" width="67" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Toque para adicionar a imagem de capa"/>
+                                <connections>
+                                    <action selector="addEditCover:" destination="fj4-fs-duT" eventType="touchUpInside" id="eE0-Zh-JHd"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xOi-Om-Ewx"/>
@@ -340,7 +343,6 @@
                     </view>
                     <navigationItem key="navigationItem" title="Adicionar Novo Jogo" largeTitleDisplayMode="never" id="tPW-oN-rGf"/>
                     <connections>
-                        <outlet property="btAddEdit" destination="Uxy-4Z-Zbs" id="E6k-ob-e0x"/>
                         <outlet property="btCover" destination="FZc-LW-EbI" id="jcf-d7-nOO"/>
                         <outlet property="dpReleaseDate" destination="9Do-bt-6Vl" id="3jg-QS-3b4"/>
                         <outlet property="ivCover" destination="15D-rT-sSL" id="LUG-Fu-LM6"/>
