--- a/MyGames/Base.lproj/Main.storyboard
+++ b/MyGames/Base.lproj/Main.storyboard
@@ -80,6 +80,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Lista de Jogos" id="m6X-1k-Udu">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="9gh-2y-g7L">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <segue destination="fj4-fs-duT" kind="show" id="d3t-1x-nva"/>
                             </connections>
@@ -114,7 +115,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fUY-48-G3a">
                                             <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -129,6 +130,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Lista de Plataformas" id="5ew-m6-ffR">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="eXI-HX-5Cg">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="addConsole:" destination="ltn-l0-Lqe" id="70p-qP-rDp"/>
                             </connections>
@@ -147,6 +149,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="ZqU-de-ght">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" name="second"/>
                         <color key="barTintColor" name="second"/>
                     </navigationBar>
                     <connections>
@@ -165,6 +168,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="xbY-IG-BF8">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" name="main"/>
                         <color key="barTintColor" name="main"/>
                     </navigationBar>
                     <connections>
@@ -376,7 +380,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="M5X-uf-5OP"/>
+        <segue reference="d3t-1x-nva"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" name="AccentColor"/>
     <resources>
